--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     </header>
     <main>
         <ul class="article-list">
-            <li><a href="#">Article 1: The Moon is Made of Cheese</a></li>
-            <li><a href="#">Article 2: Dinosaurs Still Roam the Earth</a></li>
-            <li><a href="#">Article 3: Humans Can Fly with the Power of Thoughts</a></li>
-            <li><a href="#">Article 4: Time Travel is Possible</a></li>
-            <li><a href="#">Article 5: Atlantis Found in Your Backyard</a></li>
+            <li><a href="articles/articles_one.html">Article 1: The Haunted Portrait: Paris Exhibition’s Mysterious Attraction</a></li>
+            <li><a href="articles/articles_two.html">Article 2: The Cursed Connection: A Tale of Love, Death, and Doom</a></li>
         </ul>
     </main>
 </body>
