--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     </header>
     <main>
         <ul class="article-list">
-            <li><a href="articles/articles_one.html">Article 1: The Haunted Portrait: Paris Exhibition’s Mysterious Attraction</a></li>
-            <li><a href="articles/articles_two.html">Article 2: The Cursed Connection: A Tale of Love, Death, and Doom</a></li>
+            <li><a href="articles/articles_one.html">Article 1: The Haunted Portrait - Paris Exhibition’s Mysterious Attraction</a></li>
+            <li><a href="articles/articles_two.html">Article 2: The Cursed Connection - A Tale of Love, Death, and Doom</a></li>
+            <li><a href="articles/articles_two.html">Article 3: The Roll Number Curse - Masooma Zehra's Haunting Experience </a></li>
         </ul>
     </main>
 </body>
